@@ -1,3 +1,8 @@
+2011-12-20  Dodji Seketeli  <dodji@redhat.com>
+
+	PR debug/49951
+	* g++.dg/gcov/gcov-2.C: Adjust.
+
 2012-01-01  Thomas König  <tkoenig@gcc.gnu.org>
 
 	Backport from trunk
