@@ -1,3 +1,9 @@
+2011-12-20  Dodji Seketeli  <dodji@redhat.com>
+
+	PR debug/49951
+	* decl.c (cxx_maybe_build_cleanup): Don't set location of the call
+	to the destructor.
+
 2011-12-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/51416
